# sunshine-tray

./: Cargo.toml  README  README.md  build.rs
src/: lib.rs  main.rs  tray_icon.rs
