[package]
name = "sunshine-tray"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A simple tray icon that shows the current status of sunshine as well as provided the ability to quickly start, stop or configure Sunshine"
homepage = "https://github.com/technologicalMayhem/sunshine-tray"
repository = "https://github.com/technologicalMayhem/sunshine-tray"
readme = "README.md"
categories = ["games", "os::linux-apis"]
keywords = ["sunshine", "tray"]

[[bin]]
name = "sunshine-tray"

[dependencies]
ksni = "0.2"
notify-rust = "4"

[build-dependencies]
image = "0.24"
const-gen = "1.3"